testCases/parserTestCases/correct/programManyDecls.cs16
/*
    Single declaration program 8-D
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x;

bool y;

int main(void){
    return -9999;
}

void f(int x){
    ;
}
int bart;
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
int johnney;
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
bool fat;

void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
int herb;
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
void f(int x){
    ;
}
