testCases/parserTestCases/error/nonvoidSpecifierE.cs16
/*

    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x
bool ,isMan;


int (bool isWoman){
    return isFat(isWoman);
}

bool isFat(bool){
    int +height;

    {
        bool -isPregnant;
        int not age;

        if( isWoman )
            return true;
        else
            return false;
    }
}